Bug 184643 - Moving all future occurrences of a recurring event cannot be properly undone
Summary: Moving all future occurrences of a recurring event cannot be properly undone
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-17 14:09 UTC by Reinhold Kainhofer
Modified: 2009-03-15 22:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Reinhold Kainhofer 2009-02-17 14:09:10 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Ubuntu Packages

I have a recurring event, where I move one instance to a different time. When KOrganizer asks me, I choose to modify all future instances. They are correctly moved and the recurrence rules are properly adjust both for the past and the future events. 

However, when you try to undo this operation, all past events are lost. In particular, the undo menu item says "Undo (add event)" (which is wrong and captures only half of the operation of adjusting all future events). It seems that the modification of the past event is not properly recorded in the undo history stack...
Comment 1 Sergio Martins 2009-03-15 22:17:11 UTC
SVN commit 939859 by smartins:

Undoing multiEntries was broken because mCurrentMultiEntry was never inserted into the stack.

All operations that make more than one change can be undone now (e.g. dissociate occurrence, move future occurrences, delete future 
occurrences)

BUG: 184643


 M  +1 -1      history.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=939859