Undoing multiEntries was broken because mCurrentMultiEntry was never inserted into the stack.

All operations that make more than one change can be undone now (e.g. dissociate occurrence, move future occurrences, delete future 
occurrences)

BUG: 184643

svn path=/trunk/KDE/kdepim/; revision=939859